@@ -1,7 +1,7 @@
 
 module Rufus
 module Doric
-  VERSION = '0.1.14'
+  VERSION = '0.1.15'
 end
 end
 
