@@ -5,11 +5,11 @@
 
 Gem::Specification.new do |s|
   s.name = %q{rufus-doric}
-  s.version = "0.1.14"
+  s.version = "0.1.15"
 
   s.required_rubygems_version = Gem::Requirement.new(">= 0") if s.respond_to? :required_rubygems_version=
   s.authors = ["John Mettraux"]
-  s.date = %q{2010-05-22}
+  s.date = %q{2010-06-21}
   s.description = %q{
 something at the intersection of Rails3, CouchDB and rufus-jig
   }
@@ -56,6 +56,7 @@ something at the intersection of Rails3, CouchDB and rufus-jig
      "test/ut_16_model_custom_view.rb",
      "test/ut_17_model_and_attachments.rb",
      "test/ut_18_model_map_reduce.rb",
+     "test/ut_19_neutralize_id.rb",
      "test/ut_1_model.rb",
      "test/ut_2_model_view.rb",
      "test/ut_3_model_lint.rb",
@@ -81,14 +82,14 @@ something at the intersection of Rails3, CouchDB and rufus-jig
     s.specification_version = 3
 
     if Gem::Version.new(Gem::RubyGemsVersion) >= Gem::Version.new('1.2.0') then
-      s.add_runtime_dependency(%q<activerecord>, ["~> 3.0.0.beta3"])
+      s.add_runtime_dependency(%q<activerecord>, ["~> 3.0.0.beta4"])
       s.add_runtime_dependency(%q<rufus-jig>, [">= 0.1.19"])
       s.add_runtime_dependency(%q<mime-types>, [">= 1.16"])
       s.add_development_dependency(%q<rake>, [">= 0"])
       s.add_development_dependency(%q<yard>, [">= 0"])
       s.add_development_dependency(%q<jeweler>, [">= 0"])
     else
-      s.add_dependency(%q<activerecord>, ["~> 3.0.0.beta3"])
+      s.add_dependency(%q<activerecord>, ["~> 3.0.0.beta4"])
       s.add_dependency(%q<rufus-jig>, [">= 0.1.19"])
       s.add_dependency(%q<mime-types>, [">= 1.16"])
       s.add_dependency(%q<rake>, [">= 0"])
@@ -96,7 +97,7 @@ something at the intersection of Rails3, CouchDB and rufus-jig
       s.add_dependency(%q<jeweler>, [">= 0"])
     end
   else
-    s.add_dependency(%q<activerecord>, ["~> 3.0.0.beta3"])
+    s.add_dependency(%q<activerecord>, ["~> 3.0.0.beta4"])
     s.add_dependency(%q<rufus-jig>, [">= 0.1.19"])
     s.add_dependency(%q<mime-types>, [">= 1.16"])
     s.add_dependency(%q<rake>, [">= 0"])
